# Cougr

./: Cargo.toml  PR_DESCRIPTION.md  README.md
.github/workflows/: arkanoid.yml  asteroids.yml  bomberman.yml  flappy_bird.yml  pac_man.yml  pokemon_mini.yml  pong-contract.yml  pong.yml  snake.yml  space_invaders.yml  tetris.yml  tic_tac_toe.yml
cougr-core/: Cargo.toml
examples/: README.md
examples/arkanoid/: Cargo.toml
examples/arkanoid/src/: lib.rs  test.rs
examples/asteroids/: Cargo.toml  README.md
examples/asteroids/contracts/hello-world/: .gitignore
examples/asteroids/contracts/hello-world/src/: test.rs
examples/bomberman/: Cargo.toml
examples/flappy_bird/: Cargo.toml
examples/flappy_bird/src/: components.rs  lib.rs  simple_world.rs  systems.rs
examples/geometry_dash/: Cargo.toml  build.sh
examples/geometry_dash/src/: lib.rs
examples/pac_man/: Cargo.toml  README.md
examples/pokemon_mini/: Cargo.toml  README.md
examples/pokemon_mini/src/: lib.rs
examples/pong/: Cargo.toml
examples/snake/: Cargo.toml
examples/snake/src/: components.rs  systems.rs
examples/space_invaders/: Cargo.toml
examples/space_invaders/src/: game_state.rs  lib.rs  test.rs
examples/tetris/: .gitignore  Cargo.toml  README.md
examples/tic_tac_toe/: Cargo.toml  README.md
examples/tic_tac_toe/src/: lib.rs
examples/tic_tac_toe/test_snapshots/test/: test_all_positions_initially_valid.1.json  test_all_positions_valid.1.json  test_draw.1.json  test_get_winner_none_draw.1.json  test_get_winner_o.1.json  test_init_game.1.json  test_invalid_position.1.json  test_is_valid_move.1.json  test_move_count_increments.1.json  test_no_moves_after_draw.1.json  test_no_moves_after_win.1.json  test_non_player_cannot_move.1.json  test_o_wins_column.1.json  test_o_wins_diagonal.1.json  test_o_wins_row.1.json  test_reset_after_win.1.json  test_reset_game.1.json  test_state_persistence.1.json  test_valid_move_o.1.json  test_valid_move_x.1.json  test_wrong_turn_x_moves_twice.1.json  test_x_wins_column_left.1.json  test_x_wins_column_middle.1.json  test_x_wins_column_right.1.json  test_x_wins_diagonal_anti.1.json  test_x_wins_diagonal_main.1.json  test_x_wins_row_bottom.1.json  test_x_wins_row_middle.1.json  test_x_wins_row_top.1.json
