[package]
name = "bomberman"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.1.0"
num-derive = "0.4"
cougr-core = { branch = "main", git = "https://github.com/salazarsebas/Cougr.git" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
overflow-checks = true

[features]
testutils = ["soroban-sdk/testutils"]