[package]
name = "space_invaders"
version = "0.1.0"
edition = "2021"
description = "Space Invaders on-chain game example using cougr-core"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cougr-core = { branch = "main", git = "https://github.com/salazarsebas/Cougr.git" }
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
